CSS overflows fix

--- a/styles/pages/post-slug.module.css
+++ b/styles/pages/post-slug.module.css
@@ -1,5 +1,13 @@
 .slug__container code {
   background-color: gray;
+  display: flex;
+  overflow: auto;
+}
+
+.slug__container img {
+  display: flex;
+  overflow: auto;
+  width: 100%;
 }
 
 .go_back__button {
@@ -25,4 +33,8 @@
   font-weight: 300;
   text-align: center;
   margin: 10px 0 80px 0;
+}
+
+.slug__container {
+  width: 100%;
 }
